添加单元测试及注释

--- a/web/package.json
+++ b/web/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "shopify-app-template-node",
+  "name": "lhy-shopify",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "debug": "node --inspect-brk index.js",
     "dev": "tsc && cross-env NODE_ENV=development nodemon index.js --ignore ./frontend",
     "serve": "tsc && cross-env NODE_ENV=production node index.js",
     "test": "vitest --reporter=verbose",
-    "product_test": "tsc && cross-env TS_NODE_PROJECT='product/__tests__/tsconfig.test.json' mocha product/__tests__/**.js"
-  },
-  "mocha": {
-    "require": [
-      "ts-node/register",
-      "tsconfig-paths/register"
-    ],
-    "ui": "bdd"
+    "test-prod": "vitest --reporter=verbose test_product.test.ts"
   },
   "type": "module",
   "engines": {
